--- a/DevBlog/dockerfile
+++ b/DevBlog/dockerfile
@@ -1,7 +1,3 @@
 FROM jekyll/jekyll
 
-VOLUME ["/var/blog"]
-
-WORKDIR /var/blog
-
-ENTRYPOINT ["jekyll", "serve"]
+ENTRYPOINT ["jekyll", "serve", "--incremental", "-w"]
