--- a/BlogBuilder/dockerfile
+++ b/BlogBuilder/dockerfile
@@ -1,1 +1,11 @@
 FROM jekyll/jekyll
+
+RUN ["git", "clone", "https://github.com/lukemgriffith/JekyllBlog_Dockerized"]
+
+RUN ["cp", "JekyllBlog_Dockerized/Blog/*", "/srv/jekyll"]
+
+WORKDIR "/srv/jekyll"
+
+RUN ["jekyll", "build"]
+
+VOLUME "/srv/jekyll/_site"
